zerocopy-derive/tests/ui-msrv/derive_transparent.stderr
<<<<<<< HEAD
error[E0277]: the trait bound `NotZerocopy: FromZeroes` is not satisfied
  --> tests/ui-msrv/derive_transparent.rs:37:1
   |
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromZeros);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromZeroes` is not implemented for `NotZerocopy`
   |
note: required because of the requirements on the impl of `FromZeroes` for `TransparentStruct<NotZerocopy>`
  --> tests/ui-msrv/derive_transparent.rs:27:19
   |
27 | #[derive(AsBytes, FromZeros, FromBytes, Unaligned)]
   |                   ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui-msrv/derive_transparent.rs:37:1
   |
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromZeros);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_::{closure#0}::assert_impl_all`
   = note: this error originates in the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-msrv/derive_transparent.rs:38:1
=======
error: cannot find derive macro `TryFromBytes` in this scope
  --> tests/ui-msrv/derive_transparent.rs:27:19
   |
27 | #[derive(AsBytes, TryFromBytes, FromZeroes, FromBytes, Unaligned)]
   |                   ^^^^^^^^^^^^ help: a derive macro with a similar name exists: `FromBytes`
>>>>>>> [derive] Support `derive(TryFromBytes)` for structs
   |
  ::: src/lib.rs
   |
<<<<<<< HEAD
note: required because of the requirements on the impl of `FromBytes` for `TransparentStruct<NotZerocopy>`
  --> tests/ui-msrv/derive_transparent.rs:27:30
   |
27 | #[derive(AsBytes, FromZeros, FromBytes, Unaligned)]
   |                              ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui-msrv/derive_transparent.rs:38:1
   |
38 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_::{closure#0}::assert_impl_all`
   = note: this error originates in the macro `assert_impl_all` (in Nightly builds, run with -Z macro-backtrace for more info)
=======
   | pub fn derive_from_bytes(ts: proc_macro::TokenStream) -> proc_macro::TokenStream {
   | -------------------------------------------------------------------------------- similarly named derive macro `FromBytes` defined here
   |
   = note: consider importing one of these items:
           zerocopy::TryFromBytes
           zerocopy_derive::TryFromBytes
>>>>>>> [derive] Support `derive(TryFromBytes)` for structs

error[E0405]: cannot find trait `TryFromBytes` in this scope
  --> tests/ui-msrv/derive_transparent.rs:37:50
   |
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: TryFromBytes);
   |                                                  ^^^^^^^^^^^^
   |
<<<<<<< HEAD
27 | #[derive(AsBytes, FromZeros, FromBytes, Unaligned)]
   |          ^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui-msrv/derive_transparent.rs:39:1
=======
  ::: $WORKSPACE/src/lib.rs
>>>>>>> [derive] Support `derive(TryFromBytes)` for structs
   |
   | pub unsafe trait FromBytes: FromZeroes {
   | -------------------------------------- similarly named trait `FromBytes` defined here
   |
help: a trait with a similar name exists
   |
<<<<<<< HEAD
note: required because of the requirements on the impl of `Unaligned` for `TransparentStruct<NotZerocopy>`
  --> tests/ui-msrv/derive_transparent.rs:27:41
   |
27 | #[derive(AsBytes, FromZeros, FromBytes, Unaligned)]
   |                                         ^^^^^^^^^
note: required by a bound in `_::{closure#0}::assert_impl_all`
  --> tests/ui-msrv/derive_transparent.rs:40:1
=======
37 | assert_impl_all!(TransparentStruct<NotZerocopy>: FromBytes);
   |                                                  ~~~~~~~~~
help: consider importing this trait
   |
14 | use zerocopy::TryFromBytes;
>>>>>>> [derive] Support `derive(TryFromBytes)` for structs
   |
